--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Hidden Search</title>
   </head>
   <body>
-    <div class="search">
-      <input type="text" class="input" placeholder="Search...">
-      <button class="btn">
-        <i class="fas fa-search"></i>
-      </button>
-    </div>
+      <div class="search active">
+          <input type="text" class="input" placeholder="search....">
+          <button class="btn">
+              <i class="fas fa-search"></i>
+          </button>
+      </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
